media/plex/media.plex.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
  name: plex
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      restartPolicy: Always
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: America/New_York
            - name: PLEX_CLAIM
              value: "${PLEX_CLAIM}"
            - name: PMS_INTERNAL_ADDRESS
              value: http://plex:32400
          name: plex
          image: linuxserver/plex:1.32.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 32400
              name: pms
              protocol: TCP
            - containerPort: 32400
              name: http
              protocol: TCP
            - containerPort: 32443
              name: https
              protocol: TCP
          resources:
            requests:
              cpu: 2
              memory: 2.5Gi
            limits:
              cpu: 3.5
              memory: 2Gi
          volumeMounts:
            - mountPath: /library
              name: media-hdd
              subPath: library
            - mountPath: /config
              name: media-ssd
              subPath: plex/config
            - mountPath: /shared
              name: shared
      volumes:
        - name: media-ssd
          persistentVolumeClaim:
            claimName: media-ssd
        - name: media-hdd
          persistentVolumeClaim:
            claimName: hdd
        - emptyDir: {}
          name: shared
      dnsPolicy: ClusterFirst
      hostname: plex
