media/plex/plex.statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: plex
  name: plex
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  serviceName: plex
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      restartPolicy: Always
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: America/New_York
            - name: PLEX_CLAIM
              value: "${PLEX_CLAIM}"
            - name: PMS_INTERNAL_ADDRESS
              value: http://plex:32400
          name: plex
          image: linuxserver/plex:1.32.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 32400
              name: pms
              protocol: TCP
            - containerPort: 32443
              name: https
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 3
              memory: 2Gi
            limits:
              memory: 3Gi
          volumeMounts:
            - mountPath: /library
              name: media-data
              subPath: library
            - mountPath: /config
              name: media-config
              subPath: plex/config
            - mountPath: /shared
              name: shared
      volumes:
        - name: media-config
          persistentVolumeClaim:
            claimName: media-config
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
        - emptyDir: {}
          name: shared
      dnsPolicy: ClusterFirst
      hostname: plex
